# wrapper

./: IO.c  IO_wrapper.c  Init.c  Makefile  Makefile.am  Makefile.in  Record.cpp  Tracer.c  cmpi_recv.cpp  mpi_recv.cpp  ompi_recv.cpp  wrapper.h
CUDA/: CUDA_activity.c  CUDA_callback.c  CUDA_wrapper.c  Makefile  Makefile.am  Makefile.in  cmpi_send.cpp  cupti.c  cupticallback.c
MPI/: FMPI_wrapper.c  MPI_wrapper.c  Makefile  Makefile.am  Makefile.in  mpi_send.cpp
OpenMP/: Makefile  Makefile.am  Makefile.in  OMP_Record.c  OMP_wrapper.c  omp_thread_id.c  ompi_send.cpp
